added save and load stack functionality

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <header>
       <h1>StackMaster · Tolerance Analysis</h1>
       <div style="display: flex; gap: 0.5rem;">
+        <button id="save-stack-btn" class="secondary">Save Stack</button>
+        <button id="load-stack-btn" class="secondary">Load Stack</button>
+        <input type="file" id="load-stack-input" accept=".json" style="display: none;">
         <button id="open-analysis-setup-dialog" class="secondary">Analysis Setup</button>
         <button id="open-settings-dialog" class="secondary">Settings</button>
         <button id="open-help-dialog" class="secondary">Help</button>
