added normal distribution plot

--- a/index.html
+++ b/index.html
@@ -176,6 +176,12 @@
               </div>
             </div>
           </div>
+          
+          <!-- Normal Distribution Plot (Advanced Mode Only) -->
+          <div class="advanced-stat" id="distribution-plot-container" style="display: none;">
+            <h3>Normal Distribution</h3>
+            <canvas id="distribution-plot" width="600" height="300"></canvas>
+          </div>
         </div>
         <h3>Pareto Contributions</h3>
         <div class="pareto-info">
